typescript/checker/tests/conformance/es2018/useRegexpGroups.ts.stderr
error: unimplemented
expand_export_info(RegExp)
File: $DIR/tests/conformance/es2018/useRegexpGroups.ts
 --> $DIR/tests/conformance/es2018/useRegexpGroups.ts:4:10
  |
4 | let re = /(?<year>\d{4})-(?<month>\d{2})-(?<day>\d{2})/u;
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            112,
        ),
        hi: BytePos(
            114,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2018/useRegexpGroups.ts:5:14
  |
5 | let result = re.exec("2015-01-02");
  |              ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            149,
        ),
        hi: BytePos(
            155,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2018/useRegexpGroups.ts:7:12
  |
7 | let date = result[0];
  |            ^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            175,
        ),
        hi: BytePos(
            181,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2018/useRegexpGroups.ts:9:13
  |
9 | let year1 = result.groups.year;
  |             ^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            208,
        ),
        hi: BytePos(
            214,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2018/useRegexpGroups.ts:10:13
   |
10 | let year2 = result[1];
   |             ^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            235,
        ),
        hi: BytePos(
            241,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2018/useRegexpGroups.ts:12:14
   |
12 | let month1 = result.groups.month;
   |              ^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            270,
        ),
        hi: BytePos(
            276,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2018/useRegexpGroups.ts:13:14
   |
13 | let month2 = result[2];
   |              ^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            295,
        ),
        hi: BytePos(
            301,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2018/useRegexpGroups.ts:15:12
   |
15 | let day1 = result.groups.day;
   |            ^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            326,
        ),
        hi: BytePos(
            332,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2018/useRegexpGroups.ts:16:12
   |
16 | let day2 = result[3];
   |            ^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            355,
        ),
        hi: BytePos(
            361,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2018/useRegexpGroups.ts:18:16
   |
18 | let foo = "foo".match(/(?<bar>foo)/)!.groups.foo;
   |                ^^^^^^

